--- a/05_Conjugate_Families.Rmd
+++ b/05_Conjugate_Families.Rmd
@@ -235,6 +235,20 @@ We moved from sample size 1 -> $n$
 
 `r knitr::include_url("https://www.youtube.com/embed/8ley3O5O070")`
 
+
 ### Cohort 2
 
 `r knitr::include_url("https://www.youtube.com/embed/DwNDC_QWgag")`
+
+
+### Cohort 3
+
+`r knitr::include_url("https://www.youtube.com/embed/URL")`
+
+<details>
+<summary> Meeting chat log </summary>
+
+```
+LOG
+```
+</details>
