--- a/11_Extending_Normal_Regression_Model.Rmd
+++ b/11_Extending_Normal_Regression_Model.Rmd
@@ -50,6 +50,11 @@
 
 ### Cohort 2
 
+`r knitr::include_url("https://www.youtube.com/embed/fysvHBMSXz8")`
+
+
+### Cohort 3
+
 `r knitr::include_url("https://www.youtube.com/embed/URL")`
 
 <details>
