--- a/04_Balance_and_Sequentiality.Rmd
+++ b/04_Balance_and_Sequentiality.Rmd
@@ -23,6 +23,20 @@
 ```
 </details>
 
+
 ### Cohort 2
 
 `r knitr::include_url("https://www.youtube.com/embed/xjkHan4vbfQ")`
+
+
+### Cohort 3
+
+`r knitr::include_url("https://www.youtube.com/embed/URL")`
+
+<details>
+<summary> Meeting chat log </summary>
+
+```
+LOG
+```
+</details>
