--- a/07_MCMC_under_the_Hood.Rmd
+++ b/07_MCMC_under_the_Hood.Rmd
@@ -246,6 +246,20 @@ un_runif <- runif(1)
 ```
 </details>
 
+
 ### Cohort 2
 
 `r knitr::include_url("https://www.youtube.com/embed/LcDzmgDmWlU")`
+
+
+### Cohort 3
+
+`r knitr::include_url("https://www.youtube.com/embed/URL")`
+
+<details>
+<summary> Meeting chat log </summary>
+
+```
+LOG
+```
+</details>
