--- a/08_Posterior_Inference_Prediction.Rmd
+++ b/08_Posterior_Inference_Prediction.Rmd
@@ -25,6 +25,20 @@
 ```
 </details>
 
+
 ### Cohort 2
 
 `r knitr::include_url("https://www.youtube.com/embed/n5QRu0q9p5M")`
+
+
+### Cohort 3
+
+`r knitr::include_url("https://www.youtube.com/embed/URL")`
+
+<details>
+<summary> Meeting chat log </summary>
+
+```
+LOG
+```
+</details>
