--- a/13_Logistic_Regression.Rmd
+++ b/13_Logistic_Regression.Rmd
@@ -13,17 +13,51 @@
 
 ### Cohort 1
 
-`r knitr::include_url("https://www.youtube.com/embed/URL")`
+`r knitr::include_url("https://www.youtube.com/embed/aPIx_rFsIXs")`
 
 <details>
 <summary> Meeting chat log </summary>
 
 ```
-LOG
+00:04:46	olivier:	ok, I borrowed "country cookingfrom a redneck kitchen" and oh boy ...
+Watergate Salad :
+1 (18-ounce) can cushed pineapple
+1 (3.4 ounce) box pistachio instant pudding mix
+1 (8 ounce)  container frozen whipped topping
+3 cups of mini marshmallow
+1 (8 ounce) jar maraschino cherries
+(the recipe is "put everything in a bowl")
+00:22:57	olivier:	mic is bad
+00:32:31	Brendan Lam:	This is a really interesting problem that the data science community calls imbalanced learning. I need to do more reading, but there are some Bayesian approaches to this issue: https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0152700
+00:35:21	Erik Aa:	nice article Brendan 🙂
+00:35:29	Federica Gazzelloni:	thanksù1
+00:35:35	Federica Gazzelloni:	!
+00:35:44	Federica Gazzelloni:	😄
+00:36:03	Erik Aa:	Here's something that’s a bit adjacent, focusing on inbalanced samples in political polls https://www.microsoft.com/en-us/research/wp-content/uploads/2016/04/forecasting-with-nonrepresentative-polls.pdf
+00:36:39	Brendan Lam:	Very cool!^
+00:38:23	Will Parbury:	Basically you can change the cut off figure to make the model more or less sensitive
+00:40:42	olivier:	did not know that !
+00:41:42	Federica Gazzelloni:	you are muted
+00:43:31	Will Parbury:	Well the mike worked last week!
 ```
 </details>
 
 ### Cohort 2
+
+`r knitr::include_url("https://www.youtube.com/embed/YomsXY2nj9Y")`
+
+<details>
+<summary> Meeting chat log </summary>
+
+```
+00:00:12	Ron:	afk for a moment
+00:00:27	Ron:	will be back by 9 am start ;)
+01:17:47	Robert Hilly:	https://www.youtube.com/watch?v=jMMcELbWBCM
+```
+</details>
+
+
+### Cohort 3
 
 `r knitr::include_url("https://www.youtube.com/embed/URL")`
 
