--- a/02_Bayes_Rule.Rmd
+++ b/02_Bayes_Rule.Rmd
@@ -6,8 +6,8 @@
     - conditional probability: Probability of A given B $P(A|B)$  
     - joint probability: Probability of A and B occuring  $P(A \cap B)$   
     - marginal probability:  Probability of an event $P(A)$
-    - Law of Total Probability: If a probability of an event is unknown it can be calculated using the known probability of other related event   
-    
+    - Law of Total Probability: If a probability of an event is unknown it can be calculated using the known probability of other related event
+
 - Conduct first formal Bayesian analysis  
 
 - Practice your Bayesian grammar  
@@ -40,8 +40,11 @@ DiagrammeR::grViz("
 ```
 
 Two variables:  
-- fake or real  
-- presence of ! or not  
+- fake vs real  
+- ! or not  
+
+![](./images/Quiz_2_1.png)
+
 
 ### Workflow: 
 
@@ -49,17 +52,20 @@ Two variables:
 2. A model for interpreting the data  
 3. Posterior probability model  
 
+**Prior probability model: **
+
 $$ P(FakeNew = 0.4 )  \quad and \quad  P(Real = 0.6) $$
 $$ P(B = 0.4 )  \quad and \quad  P(B^c = 0.6) $$
 
-Here $P(FakeNew)$ : prior probability of an article to be a fake news
+*Here $P(FakeNew)$ : prior probability of an article to be a fake news.*
 
-Valid probability model :   
-1. accounts all event    
-2. assign probabilities for each event  
-3. sum to one  
+A valid probability model must:
 
-### Conditional probability & likelihood
+1. account for all events;  
+2. assign probabilities for each event;  
+3. sum to one.
+
+**Conditional probability & likelihood**
 
 $P(ExClam)$ : probability that an article contains an exclamation mark in his title
 
@@ -67,47 +73,36 @@ We know that if an article is fake news : 26.67% that the title contains **!** a
 
 $$ P(Exclam|FakeNew) = 0.2667 \quad and \quad P(Exclam|Real = 0.0222)  $$
 
-This is a **conditional probability**. Conditional probability help know if B give us insight in A. If it does not provide any information it means that A and B event are **independent** ($P(A|B) = P(A)$). 
+This is a **conditional probability**. Conditional probability helps us know if B gives us an insight in A. If it does not provide any information, it means that events A and B are **independent** ($P(A|B) = P(A)$). 
 
-If we get an new article with `!` in his title is it more *likely* to be fake or real news? Here we are checking that $P(Exclam|FakeNew) >>  P(Exclam|Real = 0.0222)$. We will call this procedure a **likelihood function** it allow us to evaluate the relative compatibility of data with event $B$ or $B^c$ (Real of Fake). 
+## Normalizing constant 
 
+$P(Exclam|FakeNew) = 0.2667 \quad and \quad P(Exclam|Real) = 0.0222)$ are our likelihood, when we know A (!) we know that getting B (Fake news) is more likely. It is different that our prior probability.
 
-### Normalizing constant 
+Then we need can calculate the **joint probability** (probability of observing A nd B for example), of each options (here it is half of them): 
 
-Then we need can calculate the **joint probability** (probability of observing A and B for example), of each options (here it is half of them): 
+$$ P(Exclam \cap FakeNew) = P(Exclam|FakeNew) P (Fakenew) = 0.2667 *0.4 = 0.1067 $$ 
 
-$$P(Exclam \cap FakeNew) = P(Exclam|FakeNew) P (Fakenew) = 0.2667 *0.4 = 0.1067$$ 
+$$ P(PasExclam \cap FakeNew ) = (1 - P(Exclam|FakeNew)) * P(FakeNew)) = (1 - 0.2667) * 0.4 = 0.2993  $$ 
 
-ie: the joint probability of observing an exclamation point in the title in a fake news is equal of the probability of having an exclamation point given that the article is fake times the probability of the article to be fake. 
-
-
-$$P(PasExclam \cap FakeNew ) = (1 - P(Exclam|FakeNew)) * P(FakeNew)) = (1 - 0.2667) * 0.4 = 0.2993$$ 
-
-Here $P(B), P(B^c), P(A), P(A^c)$ cover the **marginal distributions**, they are the sum "marges" of the table. Inside of the contingency table we have the **joint probibilties**.  $P(Fake)$ will be the **marginal probability** of "Fake". 
+Here $P(B)$ is the *marginal probability* of B
 
 ```{r}
-Fake <- c(0.1067, 0.2933, 0.4)
-Real <- c(0.0133, 0.5867, 0.6)
+B <- c(0.1067, 0.2933, 0.4)
+Bc <- c(0.0133, 0.5867, 0.6)
 Total <- c(0.12, 0.88, 1)
-joint_p <- data.frame(Fake, Real, Total, row.names = c("Exclam", "No Exclam", "Total"))
+joint_p <- data.frame(B, Bc, Total, row.names = c("A", "Ac", "Total"))
 knitr::kable(joint_p)
 ```
 
-
-We can also summarize it like that : 
-
-![](images/proba-1.vsg)
-
-
-### Posterior probability via Bayes' Rule!
 
 $P(Exclam)$ is our normalizing constant.
 
 Ok but we want $P(FakeNew|exlam)$ ie $P(B|A)$
 
-$$P(FakeNew|exclam) = \frac{P(exclam \cap FakeNew)}{P(Exclam)} = \frac{P(FakeNew)L(FakeNew|Exclam)}{P(Exclam)}$$ 
+$$ P(FakeNew|exclam) = \frac{P(exclam \cap FakeNew)}{P(Exclam)} = \frac{P(FakeNew)L(FakeNew|Exclam)}{P(Exclam)}  $$ 
 
-$$posterior = \frac{prior . likelihood}{normalizing \quad constant} = \frac{0.4 * 0.2667}{0.12} = 0.889$$
+$$ posterior = \frac{prior . likelihood}{normalizing \quad constant} = \frac{0.4 * 0.2667}{0.12} = 0.889  $$
 
 ## Posterior simulation 
 
